force-app/main/default/objects/Selling_Product__c/Selling_Product__c.object-meta.xml
<CustomObject>
    <label>Selling Product</label>
    <nameField>
        <label>Selling Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selling Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>