force-app/main/default/objects/Selling_Product__c/fields/End_week_selling_date__c.field-meta.xml
<CustomField>
    <fullName>End_week_selling_date__c</fullName>
    <label>End week selling date</label>
    <type>Date</type>
</CustomField>