force-app/main/default/objects/Selling_Product__c/fields/Net_price_per_item__c.field-meta.xml
<CustomField>
    <fullName>Net_price_per_item__c</fullName>
    <formula>Price_per_item__c  - (Price_per_item__c *  Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net price per item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>