force-app/main/default/objects/Selling_Product__c/fields/Price_per_item__c.field-meta.xml
<CustomField>
    <fullName>Price_per_item__c</fullName>
    <label>Price per item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>