force-app/main/default/objects/Selling_Product__c/fields/Selling_Days__c.field-meta.xml
<CustomField>
    <fullName>Selling_Days__c</fullName>
    <formula>DAY(End_week_selling_date__c) - DAY(Start_week_selling_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>