force-app/main/default/objects/Selling_Product__c/fields/Sold_Items__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Sold Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>