force-app/main/default/objects/Selling_Product__c/fields/Start_week_selling_date__c.field-meta.xml
<CustomField>
    <fullName>Start_week_selling_date__c</fullName>
    <formula>Employee__r.Start_Week_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start week selling date</label>
    <type>Date</type>
</CustomField>