force-app/main/default/objects/Selling_Product__c/validationRules/Days_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>Days_Control</fullName>
    <active>true</active>
    <errorConditionFormula>Selling_Days__c &gt; 7</errorConditionFormula>
    <errorMessage>End week selling date must NOT be later than 7 days from the start week selling date.</errorMessage>
</ValidationRule>